--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ nav{
 
 a{
     text-decoration: none;
-    color:purple;
+    color:#4E0250;
     
 }
 ul{
@@ -24,6 +24,7 @@ ul{
     }
 
 
+    
 
 body{
     font-family:Arial, Helvetica, sans-serif ;
@@ -42,9 +43,19 @@ body{
 
 .hero{
     
+    display: flex;
+    color:#4E0250 ;
     text-align:start;
     padding: 60px;
     margin-bottom: 10px;
+    gap: 44px
+}
+
+
+
+#salmapic{
+    width: 350px;
+    
 }
 
 /* presentation */
@@ -76,11 +87,13 @@ body{
     display: flex;
     text-align: justify;
     align-items: center;
-    WIDTH: 60%;
+    width: ;: 60%;
     margin-left: 30%;
     gap: 60px;
     padding: 2%;
-    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+   
     
 
 
@@ -90,12 +103,13 @@ body{
 .competcard{
 
     background-color: white;
-    width: 345px;
+    width: 300px;
     padding: 40px;
     margin: 50px auto;
     border-radius: 25px;
     text-align: center;
     box-shadow:10px 10px 10px 10px rgb(215, 215, 215);
+    height: 300px;
 
 }
 
@@ -119,6 +133,7 @@ body{
         justify-content: center;
         padding: 64px;
         gap: 44px;
+        
 }
 
 .card{
@@ -127,7 +142,7 @@ body{
     width: 345px;
     padding: 40px;
     margin: 50px auto;
-    border-radius: 25px;
+    border-radius: 1rem;
     text-align: center;
     box-shadow:10px 10px 10px 10px rgb(215, 215, 215);
 
@@ -151,5 +166,5 @@ body{
 /* formulaire */
 
 .formular{
-
+    
 }
