--- a/style.css
+++ b/style.css
@@ -99,9 +99,11 @@ body{
     padding: 64px 24px;
     img{
         width: 44px;
+        
     }
     img:first-of-type{
         align-self: end;
+
     }
     img:last-of-type{
         align-self: baseline;
@@ -141,6 +143,7 @@ body{
     flex-grow: 1;
     object-fit: cover;
     border-radius: 1rem;
+    box-shadow: 0 4px 15px #7e067026;
 }
 
 /* presentation */
@@ -251,7 +254,8 @@ p{
     
 display: flex;
 justify-content: space-between;
-gap:50px;
+
+
 }
     
     
@@ -262,6 +266,7 @@ gap:50px;
         padding: 44px;
         gap: 44px;
         flex-direction: column;
+        
 }
 
 .card{
@@ -272,7 +277,8 @@ gap:50px;
     margin: 50px auto;
     border-radius: 17PX;
     text-align: center;
-    box-shadow:var(--ombre);
+    /* box-shadow:var(--ombre); */
+    box-shadow: 0 4px 15px #9a0b8926;
 
 }
 
